...
        textView.text = presenter.note.details
        textView.font = UIFont.systemFont(ofSize: 17)
        textView.textAlignment = .left
        textView.isEditable = true
        textView.isSelectable = true
        textView.translatesAutoresizingMaskIntoConstraints = false
        textView.accessibilityLabel = "NoteTextView"
        return textView
    }()
    
    var presenter: DetailedNotePresenterProtocol!
    
    override func viewDidLoad() {
...
